# idle-ledger

./: AGENTS.md  LICENSE  LINUX_IDLE_SETUP.md  MILESTONES.md  README.md  SPEC.md  install.sh  pyproject.toml
.github/workflows/: release-linux-x86_64.yml
changelog/: v0.1.0
idle_ledger/cli/: __main__.py  debug.py  init.py  main.py  run.py  status.py  summary.py
idle_ledger/engine/: blocks.py  state.py  types.py
idle_ledger/providers/: linux.py  sleep_linux.py
idle_ledger/store/: __init__.py  config.py  journal.py  paths.py  transition_log.py
systemd/: idle-ledger.service
tests/: test_config.py  test_engine.py  test_journal.py  test_providers_linux.py
